--- a/final-checkpoint/style/style.css
+++ b/final-checkpoint/style/style.css
@@ -1,44 +1,56 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
     font-family: poppins, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f9f9f9;
+    line-height: 1.6;
 }
 
-header {
+/* header {
     background-color: #1f351d;
     padding: 20px;
     color: white;
-}
+} */
 
-header nav {
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #1f351d;
+    padding: 10px;
 }
 
-header nav .logo h1 {
-    font-size: 24px;
-}
-
-header nav ul {
+.nav-links {
     list-style: none;
     display: flex;
+    gap: 20px;
 }
 
-header nav ul li {
-    margin-left: 20px;
+.nav-links li {
+    display: inline;
 }
 
-header nav ul li a {
+.nav-links a {
     color: white;
     text-decoration: none;
-    font-weight: bold;
+    font-size: 1.2rem;
 }
 
-header nav ul li a:hover {
-    text-decoration: underline;
+.hamburger {
+    display: none;
+    cursor: pointer;
+}
+
+.hamburger .bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px;
+    background-color: white;
+    transition: all 0.3s ease;
 }
 
 
@@ -259,40 +271,46 @@ header nav ul li a:hover {
 }
 
 
-footer {
+/* footer {
     background-color: #1f351d;
     color: white;
     padding: 20px;
     text-align: center;
     font-size: 0.9rem;
-}
+} */
 
 
 
 footer {
+    text-align: center;
+    padding: 20px;
     background-color: #1f351d;
     color: white;
-    padding: 20px;
-    text-align: center;
-    font-size: 0.9rem;
-}
-
-
-
-footer {
-    background-color: #1f351d;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    font-size: 0.9rem;
+    position: relative;
+    bottom: 0;
+    width: 100%;
 }
 
 @media (max-width: 768px) {
-    .service-cards, .team-members {
+    .nav-links {
+        position: absolute;
+        right: 0;
+        height: 100vh;
+        top: 60px;
+        background-color: #333;
         flex-direction: column;
+        width: 200px;
+        align-items: center;
+        justify-content: start;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in;
     }
 
-    .service, .member {
-        width: 100%;
+    .nav-links.open {
+        transform: translateX(0%);
+    }
+
+    .hamburger {
+        display: block;
     }
 }
