--- a/final-checkpoint/style/style.css
+++ b/final-checkpoint/style/style.css
@@ -9,6 +9,12 @@ body {
     line-height: 1.6;
 }
 
+header {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
